# FlightOfSwallows

./: .gitignore  2018-04-23_status.txt  2018-04-24_status.txt  2018-04-25_out.txt  2018-04-25_status.txt  2018-04-26_in.txt  2018-04-26_out.txt  2018-04-26_status.txt  2018-04-27_in.txt  2018-04-27_out.txt  BirdCounter.cpp  BirdCounter.h  CMakeLists.txt  DPLabel.cpp  DPLabel.h  PiCam.cpp  PiCam.h  PiCamera  PiCommon.cpp  PiCommon.h  PiOpenCV.cpp  PiOpenCV.h  PiTwitter.cpp  PiTwitter.h  README.md  README.md.backup  openCV_install.sh  pi_camera.cpp  run.sh
bootStart/: bootstart.sh
python/: analyze_birdlog.py  bird_log_func.py  lan_test.py  pi_stat_analysis.py
twitter/: HiWorld.py  readme.txt  twit_auth.py  twitter_pic.py  twitter_video.py
